kubernetes/apps/immich/base/httproute.yaml
apiVersion: gateway.networking.k8s.io/v1beta1
kind: HTTPRoute
metadata:
  name: immich-route
spec:
  parentRefs:
    - name: default-gateway
      namespace: default
  hostnames:
    - immich.ninebasetwo.net
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: "/"
      backendRefs:
        - name: immich-server
          port: 2283
